syntax = "proto3"; // Specify compiler version

package transaction;

service Transaction {
    rpc NewTransaction(GeneralRequest) returns (GeneralResponse) {} // Attempt to initialize transaction primitive
    rpc TransactionFromBytes(GeneralRequest) returns (GeneralResponse) {} // Decode transaction from byte array
    rpc Publish(GeneralRequest) returns (GeneralResponse) {} // Publish transaction
    rpc Bytes(GeneralRequest) returns (GeneralResponse) {} // Encode transaction to byte array
    rpc String(GeneralRequest) returns (GeneralResponse) {} // Encode transaction to string
    rpc SignTransaction(GeneralRequest) returns (GeneralResponse) {} // Sign transaction
    rpc VerifyTransactionSignature(GeneralRequest) returns (GeneralResponse) {} // Verify signature
}

/* BEGIN REQUESTS */

message GeneralRequest {
    uint32 nonce = 1; // Transaction nonce

    string address = 2; // Transaction address

    string address2 = 3; // Second address

    double amount = 4; // Tx amount (actually a float64)

    bytes payload = 5; // Tx payload
}

/* END REQUESTS */

/* BEGIN RESPONSES */

message GeneralResponse {
    string message = 1; // Response
}

/* END REPSONSES */